# ngila

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  _stdint.h  acinclude.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  ngila.kdevelop  ngila.kdevses  ngilarc.txt  readme.txt
Modules/: CPackBefore.cmake  NSIS.template.in
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile.am  mkman.pl  ngila.1  ngila.1pp
helpers/: bootstrap.sh
matrix/: Makefile.am  dna
releng/: build-rel-osx.sh  build-rel-unix.sh  build-rel-win.bat  releng.cmake
src/: CMakeLists.txt  Makefile.am  align.cc  align.cpp  align.h  config.h.cmake  lgmod.incl  matparse.cc  matparse.h  matparse.yy  matparser.cpp  matparser.h  matscan.cc  matscan.ll  models.cpp  models.h  ngila-256.psd  ngila.cc  ngila.cmds  ngila.cpp  ngila.desktop  ngila.h  ngila.rc  ngila_app.h  seqdb.cpp  seqdb.h  seqparse.cc  seqparse.h  seqparse.yy  seqparser.cpp  seqparser.h  seqscan.cc  seqscan.ll  sort.h  ver.h  xm.h
tests/: Makefile.am  test1  test1.aln  test1.fsa  test1.sh
tools/: aamodel.R  i586-mingw32msvc.cmake  logzeta.R
vs/: Makefile.am  config.h  ngila.sln  ngila.vcproj  vs.sln  vs.vcproj
